--- a/Develop/style.css
+++ b/Develop/style.css
@@ -26,13 +26,14 @@ textarea{
 }
 
 .time-block{
+  width: 600px;
   text-align: center;
   border-radius: 15px;
 }
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 70px;
   border-top: 1px solid white;;
 }
 
@@ -69,8 +70,9 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
-
+/* 
 #hourBlock{
   background-color: cadetblue;
   border-color: darkblue;
-}
+  width: 960px;
+} */
