--- a/Develop/style.css
+++ b/Develop/style.css
@@ -29,6 +29,7 @@ textarea{
   width: 600px;
   text-align: center;
   border-radius: 15px;
+
 }
 
 .row {
@@ -38,9 +39,12 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: rosybrown;
   color: #000000;
-  border-top: 1px dashed #000000;
+  height: 35px;
+  float: left;
+  margin-top: 33px;
+  /* border-top: 1px dashed #000000; */
 }
 
 .past {
