--- a/Develop/style.css
+++ b/Develop/style.css
@@ -4,13 +4,15 @@ body {
   line-height: 1;
 }
 
-textarea{
+#textarea{
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 300px;
+  float: left;
 }
 
 .jumbotron {
@@ -27,8 +29,10 @@ textarea{
 
 .time-block{
   width: 600px;
+  height: 50px;
   text-align: center;
   border-radius: 15px;
+  background-color: slategray;
 
 }
 
@@ -63,11 +67,12 @@ textarea{
 }
 
 .saveBtn {
-  border-left: 1px solid black;
+  /* border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #06AED5;  */
   color: white;
+  float: left;
 }
 
 .saveBtn i:hover {
