--- a/Develop/style.css
+++ b/Develop/style.css
@@ -12,6 +12,7 @@ body {
   border-left: 1px solid black;
   padding: 10px;
   width: 300px;
+  height: 66px;
   float: left;
 }
 
@@ -43,12 +44,12 @@ body {
 }
 
 .hour {
-  background-color: rosybrown;
-  color: #000000;
+  background-color: seashell;
+  color: slategray;
   height: 35px;
   float: left;
-  margin-top: 33px;
-  /* border-top: 1px dashed #000000; */
+  margin-top: 18px;
+  
 }
 
 .past {
@@ -67,21 +68,13 @@ body {
 }
 
 .saveBtn {
-  /* border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;  */
   color: white;
-  float: left;
+  height: 67px;
+  width: 70px;
+ 
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 30px;
   transition: all .3s ease-in-out;
 }
-/* 
-#hourBlock{
-  background-color: cadetblue;
-  border-color: darkblue;
-  width: 960px;
-} */
